- tire aléatoirement les 4 premières cartes des colonnes et les afficche correctement

--- a/src/main/resources/com/example/jeu_6_qui_prend_java/welcomePage.fxml
+++ b/src/main/resources/com/example/jeu_6_qui_prend_java/welcomePage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="1092.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jeu_6_qui_prend_java.Controller.GameAcceuil">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="1092.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jeu_6_qui_prend_java.Controller.GameAccueil">
    <children>
       <Text fill="#ffa100" layoutX="120.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenue au jeu LE 6 QUI PREND">
          <font>
