--- a/src/main/resources/com/example/jeu_6_qui_prend_java/mainPage.fxml
+++ b/src/main/resources/com/example/jeu_6_qui_prend_java/mainPage.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
@@ -11,18 +10,18 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="749.0" prefWidth="1092.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jeu_6_qui_prend_java.Controller.Le6QuiPrendApplication">
    <children>
-      <Rectangle fx:id="jeu31" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="717.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu9" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="717.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <ImageView fitHeight="481.0" fitWidth="484.0" layoutX="304.0" layoutY="169.0" opacity="0.3">
          <image>
             <Image url="@../../../images/background-6QuiPrend.png" />
          </image>
       </ImageView>
-      <Rectangle fx:id="jeu1" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="552.0" layoutY="109.0" smooth="false" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu3" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="720.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu4" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="804.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu5" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="120.0" layoutX="888.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu6" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="972.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu2" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="636.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu1" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="549.0" layoutY="109.0" smooth="false" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu3" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="717.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu4" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="801.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu5" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="120.0" layoutX="885.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu6" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="969.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu2" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="633.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Text fill="#ee06c0" layoutX="103.0" layoutY="209.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Votre main :">
          <font>
             <Font name="Unispace-Bold" size="29.0" />
@@ -34,63 +33,39 @@
          </font>
       </Text>
       <Rectangle fx:id="main1" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="44.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main7" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="116.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main8" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="187.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main9" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="259.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main2" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="117.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main3" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="188.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main4" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="260.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main5" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="331.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main7" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="128.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main8" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="212.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main9" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="296.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main2" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="128.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main3" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="212.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main4" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="296.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main5" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="380.0" layoutY="229.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="main6" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="44.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="main10" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="331.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="main10" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="380.0" layoutY="352.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Text fill="#2d8d3a" layoutX="73.0" layoutY="684.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Compteur de tête :">
          <font>
             <Font name="Unispace-Bold" size="14.0" />
          </font>
       </Text>
-      <ImageView fx:id="vuejeu1" fitHeight="120.0" fitWidth="78.0" layoutX="552.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu2" fitHeight="120.0" fitWidth="78.0" layoutX="636.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu3" fitHeight="120.0" fitWidth="78.0" layoutX="720.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu4" fitHeight="120.0" fitWidth="78.0" layoutX="804.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu9" fitHeight="120.0" fitWidth="78.0" layoutX="717.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu5" fitHeight="120.0" fitWidth="78.0" layoutX="888.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu6" fitHeight="120.0" fitWidth="78.0" layoutX="972.0" layoutY="109.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu7" fitHeight="120.0" fitWidth="78.0" layoutX="549.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu8" fitHeight="120.0" fitWidth="78.0" layoutX="627.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu10" fitHeight="120.0" fitWidth="78.0" layoutX="801.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu11" fitHeight="120.0" fitWidth="78.0" layoutX="885.0" layoutY="239.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu13" fitHeight="120.0" fitWidth="78.0" layoutX="549.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu14" fitHeight="120.0" fitWidth="78.0" layoutX="633.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu15" fitHeight="120.0" fitWidth="78.0" layoutX="717.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu16" fitHeight="120.0" fitWidth="78.0" layoutX="801.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu17" fitHeight="120.0" fitWidth="78.0" layoutX="885.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu18" fitHeight="120.0" fitWidth="78.0" layoutX="969.0" layoutY="368.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu19" fitHeight="120.0" fitWidth="78.0" layoutX="555.0" layoutY="498.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu20" fitHeight="120.0" fitWidth="78.0" layoutX="639.0" layoutY="498.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu21" fitHeight="120.0" fitWidth="78.0" layoutX="723.0" layoutY="498.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu22" fitHeight="120.0" fitWidth="78.0" layoutX="807.0" layoutY="498.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu23" fitHeight="120.0" fitWidth="78.0" layoutX="891.0" layoutY="498.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu24" fitHeight="120.0" fitWidth="78.0" layoutX="975.0" layoutY="498.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="vuejeu12" fitHeight="120.0" fitWidth="78.0" layoutX="372.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true" />
       <Rectangle fx:id="jeu10" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="801.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu11" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="120.0" layoutX="885.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu12" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="969.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu8" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="636.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu8" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="633.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu13" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="549.0" layoutY="368.0" smooth="false" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu15" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="717.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu16" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="801.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu17" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="120.0" layoutX="885.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu18" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="969.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu14" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="633.0" layoutY="368.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu19" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="555.0" layoutY="498.0" smooth="false" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu21" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="723.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu22" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="807.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu23" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="120.0" layoutX="891.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu24" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="975.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
-      <Rectangle fx:id="jeu20" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="639.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu19" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="549.0" layoutY="498.0" smooth="false" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu21" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="717.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu22" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="801.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu23" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="120.0" layoutX="885.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu24" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="969.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+      <Rectangle fx:id="jeu20" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="633.0" layoutY="498.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Rectangle fx:id="jeu7" arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="120.0" layoutX="549.0" layoutY="239.0" stroke="BLACK" strokeType="INSIDE" width="78.0" />
       <Text fx:id="playerName" layoutX="163.0" layoutY="154.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
       <Text fx:id="playerPoint" layoutX="234.0" layoutY="683.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <Button fx:id="FinishTrunButton" layoutX="482.0" layoutY="665.0" mnemonicParsing="false" text="Finish My Turn" />
+      <Button fx:id="FinishTurnButton" layoutX="482.0" layoutY="665.0" mnemonicParsing="false" text="Finish My Turn" />
    </children>
 </Pane>
